# limaps

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
data/: 220426_remi_1_2.csv
legacy/: limaps_190822.py
src/limaps/: __init__.py  dotplot.py  error.py  individual.py  lethargus.py  lethargusdetector.py  project.py  samplegroup.py  statistic.py  utils.py
